@@ -1,3 +1,8 @@
+2017-01-04  Carl Hetherington  <cth@carlh.net>
+
+	* Fix non frame-aligned trims when using the to-playhead
+	buttons.
+
 2016-12-25  Carl Hetherington  <cth@carlh.net>
 
 	* Updated fr_FR translation from Thierry Journet.
